WIP factory